* New Catalá translation
* Using the filename as slug if no slug is found in the metadata.
* Make it possible to extract metadata from filename by using regexp.
* When using import_wordpress users can exclude drafts with the ``-d`` switch.
* New STORY_INDEX option to generate index.html in story folders.
* Sort tags case insensitive.
* New polish translation.
* Add multi size favicon support.

Bugfixes
--------

* Made layout of the site theme responsive, with collapsing navbar.
* Use timeline instead of parsing post_pages in generic_page_renderer and task_render_pages.
* Updated disqus integration code, added identifiers so it works on any URL.
* Make sure folder links end in "/" in the gallery code.
* Removed copy of PyRSS2Gen, made it a dependency.
* Detect "namespace" dependencies for Mako templates.
* Use consistent encodings in RSS feeds.
* Refactored disqus code into separate helpers
* Use the correct extension (or raise an error) on new_post
* Fix titles that include quotes
* Updated to current CSS from docutils (was using version from 2005)
* Avoid needless regeneration of gallery indexes.
* Always ensure the folder for the new post exists.
* Get title from filename if not available in metadata.
* Don't copy sources if they end in ".html"
* Don't link to unexisting translations.

New in v5.1
===========

Features
--------

* Support for client-side cloud tags
* New ``slides`` directive, for image slideshows.
* New option DATE_FORMAT
* New "nikola console" command
* New option CACHE_FOLDER
* Updated bootstrap to 2.2.2
* Wordpress importer supports redirects
* Wordpress importer creates a url_map for Disqus thread migration
* Wordpress importer: support for [sourcecode]
* Added unstyled theme "orphan", useful as a base for independent themes.
* New "monospace" theme.
* New "Create a Theme From Scratch" tutorial.

Bugfixes
--------

* Added ID attribute to gallery images for backlinking.
* Added ALT attribute to gallery images.