@@ -1,0 +1,22 @@
+# -*- encoding:utf-8 -*-
+from __future__ import unicode_literals
+
+MESSAGES = {
+    "LANGUAGE": "简体中文",
+    "Posts for year %s": "%s年文章",
+    "Archive": "文章存档",
+    "Posts about %s": "文章分类：%s",
+    "Tags": "标签",
+    "Also available in": "其他语言版本",
+    "More posts about": "更多相关文章：",
+    "Posted": "发表于",
+    "Original site": "原文地址",
+    "Read in English": "中文版",
+    "Older posts": "旧一篇",
+    "Newer posts": "新一篇",
+    "Previous post": "前一篇",
+    "Next post": "后一篇",
+    "old posts page %d": "旧文章页 %d",
+    "Read more": "更多",
+    "Source": "源代码",
+}
